# aur-builder

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE  PKGBUILD  README.md  UPDATE.md  aur-builder.conf  aur-builder.conf.sample  aur-builder.sh  aur-cleaner.sh  sample-config.toml  test_clear_recreate_repo.sh
.github/actions/determine-version-and-tags/: action.yml  index.js  package-lock.json  package.json  rollup.config.js
.github/actions/install-aur-utils/: action.yml
.github/actions/install-system-dependencies/: action.yml
.github/workflows/: build.yaml  build_image.yaml  build_package.yml  build_publish.yml  build_publish_executable.yml  build_publish_image.yml  ensure_actions_are_updated.yml  integration_tests.yml  tests.yaml  unit_tests.yml
Docker/: Dockerfile  Makefile  build_packages.sh
resources/tests/: FD65E82A5CA3DA76E8ECA4977F4989778F99886F.key  FD65E82A5CA3DA76E8ECA4977F4989778F99886F.pub
src/: actions.rs  config.rs  error.rs  main.rs  package_parser.rs  pgp_utils.rs  test_utils.rs
src/docker/: actions.rs  commands.rs  common_actions.rs  config.rs  mod.rs
systemd/: aur-builder.service  aur-builder.timer  aur-cleanup.service  aur-cleanup.timer
tests/: cli.rs
