[package]
name = "aur-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["cargo"] }
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["blocking"] }
sequoia-openpgp = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.45"
toml = "1.1.2"
xz = "0.1.0"
