[package]
name = "aur-builder"
version = "0.1.0"
edition = "2024"
authors = [
    "Mitchell Caisse"
]
description = "AUR Wrapper to easily create, manage, and update a local repository of AUR packages"
repository = "https://github.com/mwcaisse/aur-builder"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["cargo"] }
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["blocking"] }
sequoia-openpgp = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.45"
tempfile = "3.27.0"
toml = "1.1.2"
xz = "0.1.0"
